--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "php-http/cache-plugin",
+    "name": "imper86/php-http-cache-plugin",
     "description": "PSR-6 Cache plugin for HTTPlug",
     "license": "MIT",
     "keywords": ["cache", "http", "httplug", "plugin"],
@@ -15,7 +15,8 @@
         "psr/cache": "^1.0",
         "php-http/client-common": "^1.9 || ^2.0",
         "php-http/message-factory": "^1.0",
-        "symfony/options-resolver": "^2.6 || ^3.0 || ^4.0"
+        "symfony/options-resolver": "^2.6 || ^3.0 || ^4.0",
+        "psr/http-factory": "^1.0"
     },
     "require-dev": {
         "phpspec/phpspec": "^2.5",
